--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -63,8 +63,9 @@ const isActive = (path: string) => pathname === path || (path !== '/' && pathnam
     }
 
     .logo img {
-        height: 60px;
+        height: 200px;
         width: auto;
+        border-radius: 50%;
     }
 
     .main-nav ul {
